--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,53 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* .field {
+  margin-block: 2rem;
+} */
+
+.modal {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 3;
+}
+
+.input-block {
+  background-color: beige;
+  border-radius: 10px;
+  margin-block: 1rem;
+}
+
+.input-label {
+  margin-right: 2rem;
+  font-weight: 700;
+}
+input {
+  padding:.6rem;
+  border-radius: 10px;
+}
+
+.modal-buttons {
+  background-color: aquamarine;
+}
+
+button {
+  margin-left:2rem;
+  padding: .5rem 2rem;
+  font-weight: 700;
+  border-radius: 10px;
+  background-color: greenyellow;
+}
+
+a {
+  text-decoration: none;
+}
+
+.form-error {
+  font-size: .6rem;
+  color: red;
 }
